Added clear button to clean all images

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         </h3>
 
         <button class="add-button p-3">Add Image</button>
+        <button class="clear-button p-3">Clear</button>
         <div id="images"></div>
       </div>
     </div>
