--- a/public/index.html
+++ b/public/index.html
@@ -8,36 +8,49 @@
       name="description"
       content="Web site created using create-snowpack-app"
     />
-    <!--
-      Snowpack will replace %PUBLIC_URL% with the value you have for `baseUrl` in `snowpack.config.js`.
-      Make sure to update it with your GitHub Page URL. https://<your-username>.github.io/<your-repo-name>
-
-      More about config options:
-      - https://www.snowpack.dev/reference/configuration#buildoptions.baseurl
-    -->
     <link
       rel="stylesheet"
       type="text/css"
       href="%PUBLIC_URL%/_dist_/index.css"
     />
-    <title>Snowpack & Tailwind App</title>
+    <title>Lazy loading</title>
   </head>
   <body>
-    <div class="py-10 max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="text-center">
+    <div class="py-5 max-w-screen-xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="text-center flex justify-center flex-col">
         <h3
-          class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10"
-        >
-          Tailwind template
+          class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl sm:leading-10 sticky top-0 text-red-500">
+          Lazy loading
         </h3>
 
-        <button class="add-button p-3">Add Image</button>
-        <button class="clear-button p-3">Clear</button>
+        <p class="text-lg text-green-600 m-3">Plugin in vanilla JavaScript to charge images with lazy loading</p>
+
+        <p class="text-lg text-green-600 m-3">The images added won't be downloaded until they're visible in the display</p>
+
+        <div class="flex justify-center items-center space-x-4 mt-4">
+          <button class="add-button w-24 h-10 top-10 bg-green-600 text-white rounded-md border-2 border-solid border-green-600
+                        hover:bg-white hover:text-green-800">          
+            Add Image</button>
+          <button class="clear-button w-16 h-10 top-10 bg-green-600 text-white rounded-md border-2 border-solid border-green-600
+                        hover:bg-white hover:text-green-800">
+          Clear</button>
+        </div>
+
         <div id="images"></div>
       </div>
     </div>
 
     <!-- Add more scripts here -->
+    <script>
+      let totalImages = 0;
+      let loadedImages = 0;
+
+      const printLog = () => {
+        console.log(`Added ${totalImages} images`);
+        console.log(`Loaded ${loadedImages} images`);
+        console.log('--------------------------------');
+      }
+    </script>
     <script type="module" src="%PUBLIC_URL%/_dist_/index.js"></script>
   </body>
 </html>
