deploy: 900a7123cac2696486e06bb2005a5476a828344c

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://miike0.github.io/Plugin-Lazy-loading/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
@@ -11,7 +11,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="/_dist_/index.css"
+      href="https://miike0.github.io/Plugin-Lazy-loading/_dist_/index.css"
     />
     <title>Lazy loading</title>
   </head>
@@ -51,6 +51,6 @@
         console.log('--------------------------------');
       }
     </script>
-    <script type="module" src="/_dist_/index.js"></script>
+    <script type="module" src="https://miike0.github.io/Plugin-Lazy-loading/_dist_/index.js"></script>
   </body>
 </html>
